--- a/github.yml
+++ b/github.yml
@@ -47,7 +47,7 @@ jobs:
         git commit -m "Deploy to GitHub Pages"
 
         # Push to the 'gh-pages' branch on GitHub.
-        git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" master:gh-pages
+        git push --force "https://github.com/${{ github.repository }}.git" master:gh-pages
 
     - name: Cleanup
       run: |
